# estrutura_workshop

./: main.py  pyproject.toml
app/app/: main.py
app/app/pipeline/: extract.py
