[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "Meu projeto de ETL"
authors = ["Rafael <rfdfaraone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
